--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-toolkit": "^1.1.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
